Implement Stateful query with tumbling window (1 m) for SPS30